# UmiTerm

./: .gitignore  BENCHMARK.md  Cargo.toml  README.md  test.txt
scripts/: build-app.sh
src/: explorer.rs  grid.rs  main.rs  pane.rs  parser.rs  pty.rs  renderer.rs  shader.wgsl  terminal.rs
